List should be fixed on mobile

--- a/packages/css/src/components/Dropdown.css
+++ b/packages/css/src/components/Dropdown.css
@@ -10,6 +10,7 @@
   /* --f-breakpoint--s */
   /* !important are needed to override inline styles */
   .f-DropdownList {
+    position: fixed !important;
     top: 50% !important;
     left: var(--f-space--xl) !important;
     right: var(--f-space--xl) !important;
